--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </header>
         <main>
             <h2>Geoparsing</h2>
-            <p><a class="green" href="http://www.rg.mpg.de/research/pragmatici">El papel de la literatura pragmática</a>
+            <p><a class="green" href="http://www.rg.mpg.de/research/knowledge_of_the_pragmatici">Los saberes de la literatura pragmática</a>
             </p>
             <p>Examina la diseminación de literatura pragmática (confesionarios, catechismos, manuales)
                 mediante la asociación de archivos y bibliotecas coloniales con sus coordenades geograficas;
@@ -369,7 +369,7 @@
                         <li><a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=7294398&isnumber=7294366">Jänicke, S. et al. / Visualizations for Text Re-use. <i>2014 International Conference on Information Visualization Theory and Applications (IVAPP)</i>, Lisbon, Portugal, 2014.</a></li>
                         <li><a href="https://dx.doi.org/10.1177/1473871616681374">Lettieri, N. et al. / The legal macroscope: Experimenting with visual legal analytics. <i>Information Visualization</i> (2016).</a></li>
                         <li><a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2701539">Tanenhaus, D. and Nystrom, E. / The Future of Digital Legal History: No Magic, No Silver Bullets. <i>American Journal of Legal History</i> 150 (2016).</a></li>
-                        <li>Lera: &lt;<a class="green" href="https://lera.uzi.uni-halle.de/editions/1/edit">https://lera.uzi.uni-halle.de/editions/1/edit</a>&gt;</li>
+                        <li><a href="https://lera.uzi.uni-halle.de/editions/1/edit">Molitor, P. and Ritter, J. et al. / Lera: Locate, Explore, Retrace and Apprehend complex text variants &lt;https://lera.uzi.uni-halle.de/editions/1/edit&gt;</a></li>
 <!--                    <li><a href="https://doi.org/10.1111/ajps.12175">Wilkerson, J. et al. / Tracing the Flow of Policy Ideas in Legislatures: A Text Reuse Approach. <i>American Journal of Political Science</i> 59/4 (2015).</a></li> -->
 <!--                    <li><a href="https://doi.org/10.1007/s10506-012-9119-6">Wyner, A. and Hoekstra, R. / A Legal Case OWL Ontology with an Instantiation of <i>Popov v. Hayashi</i>. <i>Artificial Intelligence and Law</i> 2012.</a></li> -->
                     </ul>
